8241852: Cleanup error message generation in LinkResolver::resolve_field

Reviewed-by: dcubed